--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -63,7 +63,7 @@ import Logo from "../icons/Logo.astro";
           >Proyectos</span
         >
       </HeaderLink>
-      <HeaderLink href="/tools">
+      <!-- <HeaderLink href="/tools">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -79,7 +79,7 @@ import Logo from "../icons/Logo.astro";
           class="span-link text-sm font-light uppercase tracking-tight hidden md:block"
           >Tools</span
         >
-      </HeaderLink>
+      </HeaderLink> -->
       <HeaderLink href="/resume" target="_blank">
         <svg
           xmlns="http://www.w3.org/2000/svg"
