--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -20,7 +20,7 @@ const { name, label } = basics;
         <h2
           class="flex items-center gap-1 capitalize font-bold text-pretty tracking-tight text-[clamp(1.125rem,1.0909rem_+_0.1818vw,1.25rem)]"
         >
-          <Data /><span class="font-extralight opacity-45">|</span> Posts publicados.
+          <Data /><span class="font-extralight opacity-45">|</span> Proyectos & prácticas.
         </h2>
         <p
           class="text-sm font-extralight text-pretty tracking-tight text-white/65 [&>strong]:text-orange-400/65 [&>strong]:font-medium"
