--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import Logo from "../icons/Logo.astro";
   <section class="menu">
     <a
       href="/"
-      class="logo flex items-center gap-1 transition-all duration-300 ease-in-out text-orange-400/65 hover:text-white/65 hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)] animate-fade-in-down"
+      class="logo flex items-center gap-1 transition-all duration-300 ease-in-out text-[rgb(var(--primary),0.85)] hover:text-[rgb(var(--light),0.85)] hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)] animate-fade-in-down"
     >
       <figure
         class="favicon rotacion hover:shadow-[0_0_8px_rgb(var(--primary),0.45)] rounded-full"
