--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -21,11 +21,11 @@ const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
     text-decoration: none;
     transition: all 0.3s ease-in-out;
     &:hover {
-      @apply text-orange-400/65;
+      @apply text-[rgb(var(--primary),0.65)];
       text-shadow: 0 0 0.5rem rgb(var(--primary), 0.45);
     }
     &.active {
-      @apply text-orange-400/65;
+      @apply text-[rgb(var(--primary),0.65)];
       text-shadow: 0 0 8px rgb(var(--primary), 0.45);
     }
   }
