--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -56,7 +56,7 @@ const printInfo = [
         desarrollo web <span>|</span> tecnología <span>|</span> social media + opinión.
       </h1>
       <h2
-        class="text-white/65 font-light text-[clamp(1.125rem,1.0139rem_+_0.5556vw,1.5rem)] text-pretty tracking-tight leading-tight [&>p>strong]:text-orange-400/85 [&>p>strong]:font-medium [&>p>strong]:text-shadow-[0_0_8px_rgb(var(--black),0.45)]"
+        class="text-[rgb(var(--light),0.65)] font-light text-[clamp(1.125rem,1.0139rem_+_0.5556vw,1.5rem)] text-pretty tracking-tight leading-tight [&>p>strong]:text-[rgb(var(--primary),0.85)] [&>p>strong]:font-medium [&>p>strong]:text-shadow-[0_0_8px_rgb(var(--black),0.45)]"
       >
         <p>
           Exploro <strong>Desarrollo Web</strong>, Tecnología y <strong
@@ -76,8 +76,8 @@ const printInfo = [
           Sígueme:
         </h3>
         <div
-          class="hero-links flex items-center gap-4 [&>a]:inline-flex [&>a]:items-center [&>a]:justify-center [&>a]:size-8 [&>a]:border-2 [&>a]:border-[rgb(var(--primary),0.15)] [&>a]:rounded-full [&>a]:bg-[rgb(var(--light),0.05)] [&>a]:hover:bg-[rgb(var(--light),0.10)] [&>a]:text-[rgb(var(--primary),0.65)]
-          [&>a]:hover:text-[rgb(var(--light),0.65)] [&>a]:transition-all [&>a]:duration-300 [&>a]:ease"
+          class="hero-links no-print flex items-center gap-4 [&>a]:inline-flex [&>a]:items-center [&>a]:justify-center [&>a]:size-8 [&>a]:border-2 [&>a]:border-[rgb(var(--primary),0.15)] [&>a]:rounded-full [&>a]:bg-[rgb(var(--light),0.05)] [&>a]:hover:bg-[rgb(var(--light),0.10)] [&>a]:text-[rgb(var(--primary),0.65)]
+          [&>a]:hover:text-[rgb(var(--light),0.65)] [&>a]:transition-all [&>a]:duration-300 [&>a]:ease [&>a]:hover:scale-125"
         >
           {
             email && (
@@ -111,12 +111,7 @@ const printInfo = [
       </footer>
     </header>
     <figure>
-      <img
-        src={image}
-        alt={name}
-        loading="lazy"
-        class="sm:rotate-6"
-      />
+      <img src={image} alt={name} loading="lazy" class="sm:rotate-6" />
     </figure>
   </article>
 </Section>
